[project]
name = "mergebot"
version = "0.1.0"
description = "Incremental multi-format file merger and Telegram publisher"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "telethon>=1.42,<2", "pydantic>=2.0"]

[project.scripts]
mergebot = "mergebot.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
