[project]
name = "huntx"
version = "0.2.0"
description = "HuntX — proxy config hunter and aggregator pipeline"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "telethon>=1.42,<2", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy", "types-PyYAML"]

[project.scripts]
huntx = "huntx.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
